--- a/package.json
+++ b/package.json
@@ -1,42 +1,58 @@
 {
-  "name": "h4xx0r.me",
-  "version": "1.0.0",
+  "name": "vueify-example",
+  "version": "2.0.0",
+  "description": "Vueify transform for Browserify example",
+  "author": "Evan You",
+  "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --inline --config webpack-config.js",
-    "build": "webpack --config webpack-config.js"
+    "dev": "cp src/style.css dist/style.css && cat src/index.jade | jade > dist/index.html && watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js & http-server dist -c 1 -a localhost",
+    "build": "cross-env NODE_ENV=production browserify -e src/main.js | uglifyjs -c warnings=false -m > dist/build.js",
+    "lint": "eslint --ext .js,.vue src",
+    "test": "karma start karma.conf.js"
+  },
+  "browserify": {
+    "transform": [
+      "brfs",
+      "babelify"
+    ]
   },
   "dependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-runtime": "^5.8.34",
-    "css-loader": "^0.23.1",
+    "brfs": "substack/brfs",
+    "bufferutil": "^1.2.1",
     "es6-promise": "^3.0.2",
     "firebase": "^2.3.2",
-    "html-loader": "^0.4.0",
-    "style-loader": "^0.13.0",
-    "template-html-loader": "0.0.3",
-    "vue": "^1.0.8",
-    "vue-hot-reload-api": "^1.2.2",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.3.0",
-    "vue-router": "^0.7.5"
+    "jade": "^1.11.0",
+    "underscore": "^1.8.3",
+    "utf-8-validate": "^1.2.1",
+    "vue": "^1.0.0",
+    "vue-router": "^0.7.7"
   },
   "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-runtime": "^5.8.34",
-    "css-loader": "^0.23.0",
-    "file-loader": "^0.8.5",
+    "babel-core": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-runtime": "^5.8.0",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "browserify-hmr": "^0.3.1",
+    "cross-env": "^1.0.5",
+    "eslint": "^1.10.3",
+    "eslint-plugin-html": "^1.1.0",
+    "http-server": "^0.8.5",
     "jade": "^1.11.0",
-    "style-loader": "^0.13.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.23",
+    "phantomjs": "^1.9.19",
+    "proxyquireify": "^3.0.1",
+    "stylus": "^0.52.4",
+    "uglify-js": "^2.5.0",
     "vue-hot-reload-api": "^1.2.2",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.2.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "vueify": "^8.0.0",
+    "vueify-insert-css": "^1.0.0",
+    "watchify": "^3.4.0"
   }
 }
